@@ -361,7 +361,9 @@ load 'my_exec'
     assert_equal 0100755, File.stat(installed_exec).mode unless win_platform?
 
     wrapper = File.read installed_exec
-    assert_no_match %r|generated by RubyGems|, wrapper
+    assert_match %r|generated by RubyGems|, wrapper
+    # HACK some gems don't have #! in their executables, restore 2008/06
+    #assert_no_match %r|generated by RubyGems|, wrapper
   end
 
   def test_generate_bin_symlink
